<resources>
    <string name="app_name">Help Line</string>
    <string name="button_home_start">Click to Begin!</string>

    <string-array name="salutation">
        <item>MR</item>
        <item>MS</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">Get the help you need</string>
    <string name="slide_2_title">Easy to use</string>
    <string name="slide_2_desc">Find your store</string>
    <string name="slide_3_title">Search items</string>
    <string name="slide_3_desc">Request help</string>

    <string name="app_open">Open</string>
    <string name="app_close">Close</string>
    <string name="please_provide_us_your_valuable_feedback">Please provide us your valuable feedback</string>
    <string name="submit">SUBMIT</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="prices">Prices</string>
    <string name="helpful">Helpful</string>
    <string name="application">Application</string>
    <string name="textview">TextView</string>
    <string name="back_to_search">Back to Search</string>
    <string name="name">Name</string>
    <string name="price_per_unit">Price Per Unit</string>
    <string name="aisle_number">Aisle Number</string>
    <string name="shelf_number">Shelf Number</string>

    <string name="button">Button</string>

    <string name="select_category_below">Select Category Below</string>
    <string name="store_search">Store Search</string>
    <string name="item_name">Item Name</string>
    <string name="trending_items">Trending Items</string>

    <string name="request_help">Request Help</string>
    <string name="user_id">User ID</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Password</string>

    <string name="sign_in">Sign IN</string>
    <string name="sign_up_as_a_new_user">SIGN UP as a new user</string>
    <string name="please_fill_in_the_following_details_to_signup">Please fill in the following details to signup</string>

    <string name="email">Email</string>
    <string name="postal_code">Postal Code</string>

    <string name="retype_password">ReType Password</string>
    <string name="user_name">User Name</string>
    <string name="select_a_store">Select a Store</string>

    <string name="store1">store1</string>
    <string name="store2">store2</string>
    <string name="store3">store3</string>
    <string name="store4">store4</string>
    <string name="requestStatus">Help will be on the help desk in about 1 minutes</string>
    <string name="wrongID">Invalid E-ID or password</string>
    <string name="invalidEmailID">Invalid Email-ID</string>
    <string name="enterPsswd">Please enter your Password</string>
    <string name="passwdLength">Password must be 8 characters long</string>
    <string name="loninFail">Login has failed</string>
    <string name="signinUser">Signing user</string>
    <string name="userName">Username</string>
    <string name="regSucc">Registration Successful</string>
    <string name="resFail">Registered failed: Please check your email and password</string>
    <string name="signupFail">Signup has failed</string>
    <string name="title_activity_store_maps">Map</string>


</resources>
